# Bali-Villa-Backend

./: .env.example  .gitignore  =1.18  CTempserver_out.txt  manage.py  pyproject.toml  requirements.txt  test_deepl.py
balivilla/: asgi.py  host_urls.py  middleware.py  settings.py  urls.py  wsgi.py
bookings/: admin.py  host_views.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_booking_guest_note.py
messaging/: admin.py  host_views.py  message_urls.py  models.py  serializers.py  urls.py  views.py
messaging/migrations/: 0001_initial.py  0002_initial.py  0003_add_read_at_and_confidence_to_message.py  0004_add_translations_field.py
payments/: admin.py  models.py
payments/migrations/: 0001_initial.py  0002_initial.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_initial.py
services/: email.py  translation.py
users/: admin.py  authentication.py  host_views.py  models.py  permissions.py  profile_urls.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_add_email_verification_fields.py  0003_verify_existing_users.py  0004_add_preferred_language.py
villas/: admin.py  admin_urls.py  admin_views.py  host_views.py  models.py  serializers.py  urls.py  views.py  wishlist_urls.py
villas/management/commands/: seed.py  translate_existing.py
villas/migrations/: 0001_initial.py  0002_alter_villa_status.py  0003_add_available_to_villaamenity.py  0004_villa_rejection_reason_villa_video_url.py
